--- a/templates/views/Login.hbs
+++ b/templates/views/Login.hbs
@@ -1,17 +1,33 @@
+<!DOCTYPE html>
+
 <html lang="en">
-<head> 
+ <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
+    
+    <link rel="stylesheet" href="/css/styles.css">  
+    <script src="../public/js/form.js"></script>
+    <link rel="stylesheet" href="/css/form.css" > 
 
- <meta charset="utf-8">    
-           
-               <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
+
   
-            <link rel="stylesheet" href="/css/styles.css">  
-            <script src="../public/js/form.js"></script>
-            <link rel="stylesheet" href="/css/form.css" >
-	
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+ <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->
+    
+  <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-  <nav class="navbar navbar fixed-top navbar-expand-sm bg-dark navbar-dark justify-content-end">
+      
+  <title>About</title>  
+
+</head>
+
+<body>
+ <header>
+
+<nav class="navbar fixed-top navbar-expand-xl bg-dark navbar-dark justify-content-end ">
     <a class="navbar-brand" href="/">Home</a>
     <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -20,7 +36,7 @@
     <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
         <ul class="navbar-nav text-right">
             <li class="nav-item active">
-                <a class="nav-link" href="/Login">Login</a>
+                <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/partners">Partner</a>
@@ -33,8 +49,8 @@
             </li>
             </li>
         </ul>
-    </div>
-</nav>  
+    </div> 
+</nav>
     
 
 </head>
