--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-<header>
+ <header>
 
 <nav class="navbar fixed-top navbar-expand-xl bg-dark navbar-dark justify-content-end ">
     <a class="navbar-brand" href="/">Home</a>
@@ -49,7 +49,7 @@
             </li>
             </li>
         </ul>
-    </div>
+    </div> 
 </nav>
            
     
@@ -57,25 +57,7 @@
 
 <!--+++++++++++++++++++++++++++++++++++++++++++++++++++ Drop Down menu bar++++++++++++++++++-->
 
-    <h1 class="display-3 text-center my-4">About Us</h1>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 ">
-          <div class="dropdown">
-            <button class="btn btn-primary btn-block dropdown-toggle" type="button" data-toggle="dropdown">
-              Menu
-            </button>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="/MerchantRegisterForm">Sign Up </a>
-              <a class="dropdown-item" href="/Login">Login/Sign Up</a>
-              <a class="dropdown-item" href="/">Home page</a>
-              <a class="dropdown-item" href="/securitycenter">Security Center</a>
-              <a class="dropdown-item" href="/clients">Clients</a>
-              <a class="dropdown-item" href="/partners">Partners</a>
-              <a class="dropdown-item" href="/help">Support</a>
-            </div>
-          </div>
-        </div>
+    
            
           <style>
               
@@ -90,7 +72,7 @@
            </style>
 </header>
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++ container ++++++++++++++++++++++++++++++++++-->
-     <div class="container">   
+     <div class="container mt-auto">   
       <div class="row"
       <div class="col"
 <div>
@@ -182,7 +164,7 @@
 
         </div>
     </div>
-</div>                   
+  </div>                   
 </div>                                                                                
                                            
           
@@ -203,9 +185,7 @@
 
 {{>footer}}                     
        
-    </body>
-
-    
+    </body>  
 
 
 </html>
