--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html lang="en">
+  <html lang="en">
  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
@@ -12,7 +11,7 @@
     <script src="../public/js/form.js"></script>
     <link rel="stylesheet" href="/css/form.css" > 
   
- <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->    
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->    
   <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -24,7 +23,7 @@
 </head>
 
 <body>
-<header>
+ <header>
 
 <nav class="navbar fixed-top navbar-expand-xl bg-dark navbar-dark justify-content-end ">
     <a class="navbar-brand" href="/">Home</a>
@@ -44,16 +43,14 @@
                 <a class="nav-link" href="/clients">Clients</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/help">Help</a>
+                <a class="nav-link" href="/about">About</a>
             </li>
             </li>
         </ul>
     </div>
 </nav>
            
-    
-
-
+<!--++++++++++++++++++++++++++++++++++Navabar end+++++++++++++++++++++++++++++-->
 
            
           <style>
@@ -61,7 +58,7 @@
 
                    body {
                        background-color: #79a6d2;
-                       background-image: url("../img/sunsetbirdsF16.png");                    
+                                      
                        background-repeat: no-repeat;
                        background-size: 100% auto;
                        
@@ -111,6 +108,7 @@
     <div class="form-group col-md-6">
       <label for="inputEmail4">Email</label>
       <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+      <small class ="form-text text-muted">Your email will not ever be shared!!</small>
     </div>
     
     <div class="form-group col-md-6">
@@ -136,12 +134,18 @@
             </div>
         </div>
         </div>
-    </body>
+  
 
            
            {{>footer}}
 
-<script src="/js/app.js"</script></script>
+ <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
