--- a/templates/views/clients.hbs
+++ b/templates/views/clients.hbs
@@ -1,62 +1,64 @@
 <!DOCTYPE html>
+  <html lang="en">
+ <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
+      
 
-<html lang="en">
-
-    <head>
-
-           <title>Client</title>
-           <link rel="stylesheet" href="/css/styles.css">  
-           <script>src="/js/app.js"</script>
-    
-           
-            <d
-
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+     <link rel="stylesheet" href="/css/styles.css">  
+    <script src="../public/js/form.js"></script>
+    <link rel="stylesheet" href="/css/form.css" > 
+  
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->    
+  <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+      
+  <title>Help</title>  
+
 </head>
 
-
 <body>
- 
+ <header>
 
-        <body>
-           
-              <style>
-                        
+<nav class="navbar fixed-top navbar-expand-xl bg-dark navbar-dark justify-content-end ">
+    <a class="navbar-brand" href="/">Home</a>
+    <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+        <ul class="navbar-nav text-right">
+            <li class="nav-item active">
+                <a class="nav-link" href="/Login">Login</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/help">eSupport</a>
+            </li>    
+            <li class="nav-item active">
+                <a class="nav-link" href="/clients">Clients</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/about">About</a>
+            </li>
+            </li>
+        </ul>
+    </div>
+</nav>
+ </header>
 
-                   body {
-                       background-color: #79a6d2;
-                       background-image: url("../img/thunderbirds.png");                       
-                       background-repeat: no-repeat;
-                       background-size: 100% 100%;
-
-                       
-                       
-                      
-           </style> 
-                            {{>header}}
-
-    <style>
-                      h2 {
-                             position: absolute;
-                             left:400px;
-                             top:15px
-                                
-                                }
-               </style>
-          </h2>  </div>
-
-
-
- </body>
+ <style>
+            body  {
+                   background-image: url("../img/computer-pen.png");                       
+                   
+                   background-repeat: no-repeat;
+                   background-size:  100% auto;
+                  }
+         </style> 
 
 
 <!--################################## Column Nest ##################-->
