--- a/templates/views/clients.hbs
+++ b/templates/views/clients.hbs
@@ -18,7 +18,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
       
-  <title>Help</title>  
+  <title>Client</title>  
 
 </head>
 
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="/help">eSupport</a>
             </li>    
             <li class="nav-item active">
-                <a class="nav-link" href="/clients">Clients</a>
+                <a class="nav-link" href="/partners">Partners</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/about">About</a>
@@ -49,7 +49,7 @@
         </ul>
     </div>
 </nav>
- </header>
+ 
 
  <style>
             body  {
@@ -60,13 +60,14 @@
                   }
          </style> 
 
-
+</header>
 <!--################################## Column Nest ##################-->
 
 
 <div class="container-fluid">
-  <h2></h2>
-  <p><h4><b><i>Clients Account</i></b></h4></p>
+  <h2></h2> 
+  <br/>
+  <H5><p class = "text-white">Clients Account</p></H5> 
 </div>
 <!--+++++++++++++++++++++++++++++++++++++++Col-8 ++++++++++++++++++++++-->
 <div class="container-fluid">
