--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -49,7 +49,17 @@
         </ul>
     </div>
 </nav>
- </header>         
+      
+
+ <style>
+            body  {
+                   background-image: url("../img/thunderbirds.png");                       
+                   
+                   background-repeat: no-repeat;
+                   background-size:  100% auto;
+                  }
+         </style> 
+ </header>   
 <!--++++++++++++++++++++++++++++++++++Navabar end+++++++++++++++++++++++++++++-->
 
 <!--+++++++++++++++++++++++  header  ++++++++++++++++++++++++++++++++++++++++++++-->
@@ -166,7 +176,7 @@
         <div class="col-6 bg-secondary">
          <div  class="p-3 mb-2 bg-white text-dark">
             <div class="card"> </div> -->
-           <p>  <img src="../img/call.png" style="margin-left:480px;  width:350px;display:block" /> 
+          
            
              
        Sign Up Today ! Just simply fill out our online application and one of our customer representatives will contact you as soon as possible.
@@ -210,6 +220,7 @@
     </div>
     
   </div>
+</div>
 </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
