--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -59,7 +59,7 @@
                    background-size:  100% auto;
                   }
          </style> 
-
+</header>
 <!--++++++++++++++++++++++++++++++++++Navabar end+++++++++++++++++++++++++++++-->
 
 <!--+++++++++++++++++++++++  header  ++++++++++++++++++++++++++++++++++++++++++++-->
