--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -7,9 +7,9 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-     <link rel="stylesheet" href="/css/styles.css">  
+   <!--  <link rel="stylesheet" href="/css/styles.css"> --> 
     <script src="../public/js/form.js"></script>
-    <link rel="stylesheet" href="/css/form.css" > 
+   <!-- <link rel="stylesheet" href="/css/form.css" > -->
   
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->    
   <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
@@ -65,8 +65,7 @@
 <!--+++++++++++++++++++++++  header  ++++++++++++++++++++++++++++++++++++++++++++-->
 
 <div class="container-fluid ">
-  <hr>
-    <h2>Partners Account</h2>
+  
   
   
   <p><h4><b><i>Partners Account</i></b></h4></p>
@@ -233,10 +232,7 @@
 
 
                      {{>footer}}
-</body>
-</html>
-
-            
+           
             
            
 
