--- a/templates/views/MerchantRegisterForm.hbs
+++ b/templates/views/MerchantRegisterForm.hbs
@@ -1,47 +1,67 @@
-<!DOCTYPE html
-<html lang="en">
-    
-<head>
-    <title>Sign Up</title>
-            <link rel="stylesheet" href="/css/styles.css">  
-            <script src="../public/js/form.js"></script>
-            <link rel="stylesheet" href="/css/form.css" >
- 
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<!DOCTYPE html>
+  <html lang="en">
+ <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
+      
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
+   <!--  <link rel="stylesheet" href="/css/styles.css"> 
+    <script src="../public/js/form.js"></script> -->
+    <link rel="stylesheet" href="/css/form.css" > 
+  
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->    
+  <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+      
+  <title>Register</title>  
+
 </head>
-<body>                 
-                                {{>header}} 
-                    <style>                            
-                                  body {
-                                      margin-top: 0px;
-                       background-color: #79a6d2; 
-                       background-image: url("../img/DSC_1059.png");                          
-                       background-repeat: no-repeat;
-                       background-size: 100% 100%;  
-                       </style> 
-                                 
-          <div> 
-              <h2>
-               <style>
 
-                             
+<body>
+ <header>
 
-                      h2 {   
-                             position: absolute;
-                             left:400px;
-                             top:15px
-                                
-                                }
-               </style>
-             </h2>  
-          </div>
-</body>
+<nav class="navbar fixed-top navbar-expand-xl bg-primary navbar-dark justify-content-end ">
+    <a class="navbar-brand" href="/">Home</a>
+    <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+        <ul class="navbar-nav text-right">
+            <li class="nav-item active">
+                <a class="nav-link" href="/Login" class = "text-success">Login</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/help">eSupport</a>
+            </li>    
+            <li class="nav-item active">
+                <a class="nav-link" href="/clients">Clients</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/about">About</a>
+            </li>
+            </li>
+        </ul>
+    </div>
+</nav>
+      
 
+ <style>
+            body  {
+                   background-image: url("../img/thunderbirds.png");                       
+                 
+                   background-repeat: no-repeat;
+                   background-size:  200% auto;
+                  }
+         </style> 
+</header>
+
+<!---+++++++++++++++++++++++++++++++++++++++++++++++ header end +++++++++++++++++++++++++++++++-->
 <form>
 <form method=" post" action"add_customer_info"  
 <form name="RegisterForm" method="post" action="MerchantApplication" id="ClientRegisterForm">
@@ -573,8 +593,11 @@ Sys.Application.initialize();
                 window.location = '../../Web/Merchant/MerchantApplication.aspx';
             }
         </script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+ <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+   
+   
     </body>
 </html>
