--- a/templates/views/MerchantRegisterForm.hbs
+++ b/templates/views/MerchantRegisterForm.hbs
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
    <!--  <link rel="stylesheet" href="/css/styles.css"> 
-    <script src="../public/js/form.js"></script> -->
-    <link rel="stylesheet" href="/css/form.css" > 
+    <script src="../public/js/form.js"></script> 
+    <link rel="stylesheet" href="/css/form.css" > -->
   
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->    
   <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
@@ -453,7 +453,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls(['tctl00$ContentPl
     </div>
 </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) 
     <script type="text/javascript" src="../../Content/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
@@ -513,7 +513,7 @@ var eWorld_NumericBox_Items =  new Array(new NumericBox_Item('ctl00_ContentPlace
 //<![CDATA[
 Sys.Application.initialize();
 //]]>
-    </script>
+    </script> -->
 
 </form>
 <!--....................................................................form end............................................ ..................-->
