--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,52 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
-    <html>
-    <head>
-
-           <title>Home</title>
-           <link rel="stylesheet" href="/css/styles.css">  
-            <script src="../public/js/form.js"></script>
-            <link rel="stylesheet" href="/css/form.css" >
-    </head>
-     <body>
-                        <div>   {{>header}}     </div>
-            <div> 
-                <h2>
-               <style>
-                      h2 {  
-                                                       
-                             position: absolute;
-                             left:450px;
-                             top:10px
-                                
-                                }
-               </style>
-                </h2>  
-          </div>
-      </body>
+  <html lang="en">
  <head>
-              
-<head>
-  <title>ChecksDigit</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
+      
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+   <!--  <link rel="stylesheet" href="/css/styles.css"> 
+    <script src="../public/js/form.js"></script> 
+    <link rel="stylesheet" href="/css/form.css" > -->
+  
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->    
+  <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-                         
+
+      
+  <title>Register</title>  
+
 </head>
-                  
+
 <body>
+ <header>
+
+<nav class="navbar fixed-top navbar-expand-xl bg-dark navbar-dark justify-content-end ">
+    <a class="navbar-brand" href="/">Home</a>
+    <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+        <ul class="navbar-nav text-right">
+            <li class="nav-item active">
+                <a class="nav-link" href="/Login" class = "text-success">Login</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/help">eSupport</a>
+            </li>    
+            <li class="nav-item active">
+                <a class="nav-link" href="/clients">Clients</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/about">About</a>
+            </li>
+             <li class="nav-item active">
+                <a class="nav-link" href="/securitycenter">Cyber_Security</a>
+            </li>
+            </li>
+        </ul>
+    </div>
+</nav>
+      
+
  <style>
             body  {
-                   background-image: url("../img/vpn-net6.png");                       
-                   background-color: #cccccc;
+                   background-image: url("../img/vpn-net.png");                       
+                 
                    background-repeat: no-repeat;
                    background-size:  100% auto;
                   }
          </style> 
+</header>
+
+
+<!--+++++++++++++++++++++++++++++++++++++-header end+++++++++++++++++++++++++++++--->
 <div class="jumbotron text-center">
   <h2></h2> 
   <p>1-800-888-8888</p>
@@ -118,6 +137,13 @@
 </div>-->
 </div>
 </section> 
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    crossorigin="anonymous"></script>
 </body>
 </html>
               {{>footer}}
