index navabar link

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -40,6 +40,9 @@
                 <a class="nav-link" href="/help">eSupport</a>
             </li>    
             <li class="nav-item active">
+                <a class="nav-link" href="/partners">Partners</a>            
+            </li>
+            <li class="nav-item active">
                 <a class="nav-link" href="/clients">Clients</a>
             </li>
             <li class="nav-item active">
@@ -47,7 +50,8 @@
             </li>
              <li class="nav-item active">
                 <a class="nav-link" href="/securitycenter">Cyber_Security</a>
-            </li>
+             </li>
+             
             </li>
         </ul>
     </div>
