add padding-top 70, card 12

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,7 +18,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
       
-  <title>Register</title>  
+                                <title>Home</title>  
 
 </head>
 
@@ -61,7 +61,7 @@
  <style>
             body  {
                    background-image: url("../img/vpn-net.png");                       
-                 
+                   
                    background-repeat: no-repeat;
                    background-size:  100% auto;
                   }
@@ -70,6 +70,8 @@
 
 
 <!--+++++++++++++++++++++++++++++++++++++-header end+++++++++++++++++++++++++++++--->
+
+
 <div class="jumbotron text-center">
   <h2></h2> 
   <p>1-800-888-8888</p>
@@ -119,9 +121,9 @@
       <hr>
 </div>
 </div>
-  <!--  <div class="col-sm-2" >       
+    <div class="col-sm-2" >       
         <div class="c_box_item" style="text-align:left">   
-         <!--  <div class="c_box_item" style="text-align:center"> -->
+         <!--  <div class="c_box_item" style="text-align:center"> 
           <!--<h3>Security </h3> </div>
       <img src="../img/CustomerService.jpg" style="margin:auto; width:430px;display:block" /> 
       <div class="col-sm-12 text-left" style="padding-top:0em;"></div>
