--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -54,21 +54,22 @@
  <style>
             body  {
                    background-image: url("../img/thunderbirds.png");                       
-                   
+                 
                    background-repeat: no-repeat;
                    background-size:  100% auto;
                   }
          </style> 
 </header>
 <!--++++++++++++++++++++++++++++++++++Navabar end+++++++++++++++++++++++++++++-->
-
+<style> body {padding-top: 70px;} </style> 
 <!--+++++++++++++++++++++++  header  ++++++++++++++++++++++++++++++++++++++++++++-->
 
-<div class="container-fluid ">
-  
-  
-  
+<div class="container-fluid ">  
+ 
+    
+    
   <p><h4><b><i>Partners Account</i></b></h4></p>
+
 </div>
 
 <div class="container-fluid">
@@ -189,7 +190,7 @@
     <!--...................................................right side section...................................-->
     <div class="col-4 bg-success">
       <div class="row" style="margin-top:1em;">
-        <div class="col-sm-10">
+        <div class="col-sm-12">
          <div  class="col-xs-12 col-sm-10" style="margin-bottom:1em;">
                                        
                                         <div class="card">
