--- a/templates/views/clients.hbs
+++ b/templates/views/clients.hbs
@@ -18,7 +18,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
       
-  <title>Client</title>  
+  <title>Clients</title>  
 
 </head>
 
@@ -125,12 +125,12 @@
        </div>
       </div>
       </div>
-    <!--.....................................................................Green zone .......................-->
+    <!--.....................................................................Green zone .................................-->
    
     <div class="col-4 bg-success">
       <div class="row" style="margin-top:1em;"> 
-         <div class="col-sm-10 " >
-              <div  class="col-xs-12 col-sm-12 " style="margin-bottom:1em;" >
+         <div class="col-sm-12 " >
+              <div  class="col-xs-12 col-xs-12 " style="margin-bottom:1em;" >
                                        
                     <div class="card">
                        <div  class="card-title text-center""> <b>1800-888-8888</b>
