--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -80,10 +80,12 @@
 
 
  <section class="play creative_feature_area">
+
     <div class="container-fluid", style="margin-top:auto">
     
-<div class="row">
-    <div class="col-sm-6" style="text-align:left">
+              <div class="row">
+                <div class="col-sm-8">
+    <div class="col-xs-10" style="text-align:left">
          
     <!--####################### Card Deck ##############################-->       
             <div class="card-deck"> 
@@ -121,27 +123,7 @@
       <hr>
 </div>
 </div>
-    <div class="col-sm-2" >       
-        <div class="c_box_item" style="text-align:left">   
-         <!--  <div class="c_box_item" style="text-align:center"> 
-          <!--<h3>Security </h3> </div>
-      <img src="../img/CustomerService.jpg" style="margin:auto; width:430px;display:block" /> 
-      <div class="col-sm-12 text-left" style="padding-top:0em;"></div>
-                                    <ul style="list-style:dot">
-                                        <li>Increased Sales</li>
-                                        <li>Reduced Fraud</li>
-                                        <li>Heightened Security</li>
-                                        <li>Safe, Smart & Simple</li>
-                                    </ul>  
-       </div>  
-      <p style="text-align:justify" >
-        <b>Our Compliance System is divided into three action levels: Prevent, Detect, and Respond. <a class="more_btn" href="../securitycenter">Learn More</a> </b>
-      </p>      
-    </div>
   </div>
-</div>
-</div>-->
-</div>
 </section> 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
