made jumbotron trasparent

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -72,9 +72,11 @@
 <!--+++++++++++++++++++++++++++++++++++++-header end+++++++++++++++++++++++++++++--->
 
 
-<div class="jumbotron text-center">
-  <h2></h2> 
-  <p>1-800-888-8888</p>
+ 
+  <div style="background: transparent !important" class="jumbotron text-center"> 
+   <H4> <p>1-800-888-8888 </p></H4>
+        
+
   <P> <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a></p> 
 </div> 
 
