--- a/templates/views/securitycenter.hbs
+++ b/templates/views/securitycenter.hbs
@@ -3,10 +3,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
     <title>HTML FlexBox -  Two percentage columns and one larger, left content</title>
-    <!--<link rel="stylesheet" href="/css/styles.css">  
-            <script src="../public/js/form.js"></script>
-                           {{>header}} -->
-       
+      
             
     <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">    
     <meta name="generator" content="HAPedit 3.1">
@@ -216,7 +213,10 @@ img {
             <li><b>3. </b>  Informs you that you have won a contest</li>
              
         </ul>
-    </div>
+     <img src="../img/StopFraud.png" style="margin-right:60em;  width:120px;display:block " >
+     </div>
+
+    <!--++++++++++++++++++++++++++extra zone start ++++++++++-->   
     <div id="extra">
         <p><strong></strong></p>
         <h3>3. Don't adopt a pet password</h3> <hr/>
