added Fed PCI complianced page

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -48,6 +48,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/about">About</a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/compliance">PCI_Complianced</a>
+             </li>
              <li class="nav-item active">
                 <a class="nav-link" href="/securitycenter">Cyber_Security</a>
              </li>
