--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -124,11 +124,12 @@
     <div class="card-body">
       <h5 class="card-title">2 Ways To Input Transactions:</h5>
       <p class="card-text">Just simply fill out our online application and one of our customer representatives will contact you as soon as possible.</p>
+     
       <ul style="list-style:dot; padding-left:1rem;">
-                                                            <li>Virtual Terminal</li>
-                                                            <li>Application Program Interface (API).</li>
-                                                        </ul> 
-                                                        <hr>
+                                                 <li>Virtual Terminal</li>
+                                                 <li>Application Program Interface (API).</li>
+                                              </ul> 
+                                      <hr>
       <p class="card-text"><small class="text-muted">1-800-888-8888</small></p>
       <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a>
     </div>
@@ -196,7 +197,7 @@
                                         <div class="card">
                                             <img alt="" src="../img/CustomerServiceDiv.png" class="card-img-top "/>
                                             <div class="card-body">
-                                                <div class="">
+                                                <div class="card-text">
                                                     <p>
                                                         <i>We assure good, competitive buy rates and timely residual payouts. </span>
                                                     Accompanying weekly statements provided four days prior to the wire.</i>
