--- a/templates/views/securitycenter.hbs
+++ b/templates/views/securitycenter.hbs
@@ -177,7 +177,7 @@ img {
     </div>
     <div id="navigation">
         <img src="../img/ePayBankDigi.png" style="margin-right:60px; width:900px;display:block" />
-        <p><strong>2. I Received a Suspicious E-mail</strong></p>
+        <h4><p><strong>2. I Received a Suspicious E-mail</strong></p></h4>
         <p>
                If you think you've received a fraudulent e-mail, but you haven't acted on it: Please forward	
                                                     it to <a href="mailto:abuse@chase.com">risk@check4digipay.com</a> so we can investigate it for you.
@@ -213,7 +213,13 @@ img {
             <li><b>3. </b>  Informs you that you have won a contest</li>
              
         </ul>
-     <img src="../img/StopFraud.png" style="margin-right:60em;  width:120px;display:block " >
+        
+        <div class ="card">
+     <img class"card -img-top" src="../img/StopFraud.png" style="margin-right:10em;  width:120px;display:block " >
+     <div class="card-body"></div>
+     <h5 class="card-title">Always Check your account alteration:</h5></h5>
+      <p class="card-text">Will not share your email and password </p>
+     </div>
      </div>
 
     <!--++++++++++++++++++++++++++extra zone start ++++++++++-->   
