--- a/templates/views/compliance.hbs
+++ b/templates/views/compliance.hbs
@@ -4,7 +4,7 @@
  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
-    
+ <!--    <link rel="stylesheet" href="/css/compliance.css"> -->
      <link rel="stylesheet" href="/css/styles.css">  
   <!--  <script src="../public/js/form.js"></script>
     <link rel="stylesheet" href="/css/form.css" > -->
@@ -20,7 +20,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
       
-  <title>Fed Compliance</title>  
+  <title>Fed Compliance </title>  
 
 </head>
 
@@ -53,9 +53,7 @@
 </nav>
            
     <!--+++++++++++++++++++++++++++++++++++++++++++++++++++ Navabar End++++++++++++++++++-->
-
-    
-           
+             
           
 
 <style>
@@ -71,9 +69,10 @@ body {
 }
 </style>
 </header>
+
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++ container ++++++++++++++++++++++++++++++++++-->
 </head>
-<body>
+<id=body>
 
 <div class="content"> <br>
     <img alt="" src="../img/complinacelogo.png" class="card-img-top" />
@@ -82,8 +81,8 @@ body {
   <h1>Resize the browser window to see the effect.</h1>
   <p>This page is always centered on screens that are wider than 500px. On screens that are less than 
   500px wide, it will span the whole of the page.</p>-->
-  <p> Data hosting and processing must be meet PCI (Payment Card or Check Industry) Security Standards.
-The PCI Data Security Standard (PCI-DSS) represents a common set of industry tools and measurements to help ensure the safe handling of sensitive information. 
+  <p class="text-justify", "text-sm-center" > Data hosting and processing must be meet <b>PCI</b> (Payment Card or Check Industry) Security Standards.
+The PCI Data Security Standard <b>(PCI-DSS)</b> represents a common set of industry tools and measurements to help ensure the safe handling of sensitive information. 
 The PCI DSS was created by the major bank, the credit card, the processor, as a guideline to help businesses implement the necessary hardware, software and other procedures to guard sensitive checks, bank and personal information. There are many aspects to compliance including: management, policies, procedures, network architecture, software design and other critical protective measures.  All organizations who hanle payment are obligated to comply with the PCI DSS. The Compliance be aware is growing problems of fraud losses, mis-represent, loss of consumer confidence, brand & reputation damage, legislature interest.
 
 Our definition of integrity is acting in accordance with our values of honesty and fairness- responsibly, excellently and innovatively wherever we do business. A key element of integrity is compliance, a strict adherence to the law and to our own internal regulations to meet PCI Data security stardard (PCI-DDS). 
