--- a/templates/views/compliance.hbs
+++ b/templates/views/compliance.hbs
@@ -58,7 +58,7 @@
 
 <style>
 body {
-  background: #555;
+  background: lightblue;
 }
 
 .content {
@@ -72,11 +72,11 @@ body {
 
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++ container ++++++++++++++++++++++++++++++++++-->
 </head>
-<id=body>
+<h1><p class="text-center">Complianted PCI (Payment Card or Check Industry) Security Standards</p></h1> 
 
 <div class="content"> <br>
     <img alt="" src="../img/complinacelogo.png" class="card-img-top" />
-  <h1>PCI (Payment Card or Check Industry) Security Standards</body></H1> 
+  
   <!--are wider than 800 pixels.</h1>
   <h1>Resize the browser window to see the effect.</h1>
   <p>This page is always centered on screens that are wider than 500px. On screens that are less than 
