add benefit page

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -40,6 +40,9 @@
                 <a class="nav-link" href="/help">eSupport</a>
             </li>    
             <li class="nav-item active">
+                <a class="nav-link" href="/benefits">Benefits</a>            
+            </li>
+            <li class="nav-item active">
                 <a class="nav-link" href="/partners">Partners</a>            
             </li>
             <li class="nav-item active">
@@ -49,7 +52,7 @@
                 <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/compliance">PCI_Complianced</a>
+                <a class="nav-link" href="/compliance">Compliance</a>
              </li>
              <li class="nav-item active">
                 <a class="nav-link" href="/securitycenter">Cyber_Security</a>
