modify list group

--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -75,7 +75,7 @@ body {
 <h1><p class="text-center">Features and Benefits</p></h1> 
 
 <div class="container">
-    
+
 <div class="content"> <br>
     <img alt="" src="../img/chartbar.png" class="card-img-top" />
   
@@ -94,19 +94,19 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
                   The general process for this service is:
               </b>
               <ul class="list-group mb-n5">
-                  <li class="list-group-item">Step 1: Customers select products and add them to merchant's shopping cart.</li>
-                  <li class="list-group-item">Step 2: Customers proceed to the checkout page.</li> 
-                  <li class="list-group-item">Step 3: Customers register or login to their account.</li>
-                  <li class="list-group-item">Step 4: Customers enter or confirm their personal details including:
+                  <li class="list-group-item"><b>Step 1</b>:  Customers select products and add them to merchant's shopping cart.</li>
+                  <li class="list-group-item"><b>Step 2</b>:  Customers proceed to the checkout page.</li> 
+                  <li class="list-group-item"><b>Step 3</b>:  Customers register or login to their account.</li>
+                  <li class="list-group-item"><b>Step 4</b>:  Customers enter or confirm their personal details including:
             
                                                               
-                                                <ul style="list-style:dot; padding-left:1rem;">
-                                                            <li>Debit your customers' checking accounts.</li>
-                                                            <li>Accept payments by phone (MOTO), online, (API) or in person (Virtual Terminal).</li>
-                                                            <li>Set up recurring billing to automatically debit customers' checking accounts.</li>
+                <ul style="list-style:square; padding-left:5rem;">
+                      <li>Debit your customers' checking accounts.</li>
+                      <li>Accept payments by phone (MOTO), online, (API) or in person (Virtual Terminal).</li>
+                      <li>Set up recurring billing to automatically debit customers' checking accounts.</li>
                   </li>   
-                    </ul>
-                      </ul>
+                </ul>
+            </ul>
                 </p>
 
 
