--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -75,7 +75,7 @@
 </header>
 
 
-<!--+++++++++++++++++++++++++++++++++++++-header end+++++++++++++++++++++++++++++--->
+<!--+++++++++++++++++++++++++++++++++++++-header end ++++++++++++++++++++++++++++++++++++++++++++++--->
 
 
  
@@ -87,13 +87,13 @@
 </div> 
 
 
- <section class="play creative_feature_area">
+ <section class="place 3 cards creative_feature_area" style="margin-top:10em">
 
     <div class="container-fluid", style="margin-top:auto">
     
               <div class="row">
                 <div class="col-sm-8">
-    <div class="col-xs-10" style="text-align:left">
+   <!-- <div class="col-xs-10" style="text-align:left">-->
          
     <!--####################### Card Deck ##############################-->       
             <div class="card-deck"> 
@@ -124,6 +124,57 @@
   <!--############################ Compliance card ##################################-->
 <div class="card">
     <img class="card-img-top" src="../img/CustomerService.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title"><b>Compliance</h5></b>
+      <div class="card bg-primary text-white"></div>
+      <p class="card-text">Our Compliance System is divided into three action levels: Prevent, Detect, and Respond. <a class="more_btn" href="../securitycenter">Learn More</a> </p>
+      <hr>
+</div>
+</div>
+  </div>
+</section> 
+              <Br>
+              <br>
+
+<!---================================================= Section2  ===================================-->
+<section class="place 3 cards creative_feature_area" style="margin-top:10em">
+
+    <div class="container-fluid", style="margin-top:auto">
+    
+              <div class="row">
+                <div class="col-sm-8">
+   <!-- <div class="col-xs-10" style="text-align:left">-->
+                  <h2><p class="text-dark" ml-10em >Secure Data Processing Solutions
+guaranteed to increase Sales and Revenues </p></h2>
+    <!--####################### Card Deck ##############################-->       
+            <div class="card-deck"> 
+              <!--=======================Solutions card===============-->
+              <div class="card" > 
+             <img class ="card-img-top" src="../img/import-export-beach.png" alt ="Card image Cap">
+              <div class="card-body"  "tex-left">
+              <h5 class="card-title"><b>EZ Data Solutions</b></h5>
+              <div class="card bg-primary text-white"></div>
+             <p class="card-text"> ChecksDigit Members Account Program and Data Processing Solutions are easy to use and 
+          with the most advanced technology, are enough to handle the needs of your business. <a class="more_btn" href="../clients">Get Start</a>
+     </p> <hr>
+             </div>
+             </div>  
+         
+    
+<!--##############################Partners card ############################-->
+ <div class="card">
+    <img class="card-img-top" src="../img/vpn-neto.png" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title"><b>3 Ways to Make Money</b></h5>
+      <div class="card bg-primary text-white"></div>
+      <p class="card-text">There are three ways in making money with us; One is to use our Solutions as members do. 
+      Two is to become a Partner.Three is as an Aggregator utilizing our secure payment portal. <a class="more_btn" href="../partners">Get Start</a>.
+      </p> <hr>
+     </div>
+     </div>
+  <!--############################ Compliance card ##################################-->
+<div class="card">
+    <img class="card-img-top" src="../img/energy.png" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title"><b>Compliance</h5></b>
       <div class="card bg-primary text-white"></div>
