align center cards  titles

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -142,8 +142,8 @@
     <div class="container-fluid", style="margin-top:auto">
     
               <div class="row">
-                <div class="col-sm-8">
-   <!-- <div class="col-xs-10" style="text-align:left">-->
+        <!--        <div class="col-sm-8">-->
+    <div class="col-xs-8" style="text-align:left">
                   <h2><p class="text-dark" ml-10em >Secure Data Processing Solutions
 guaranteed to increase Sales and Revenues </p></h2>
     <!--####################### Card Deck ##############################-->       
@@ -152,37 +152,63 @@ guaranteed to increase Sales and Revenues </p></h2>
               <div class="card" > 
              <img class ="card-img-top" src="../img/import-export-beach.png" alt ="Card image Cap">
               <div class="card-body"  "tex-left">
-              <h5 class="card-title"><b>Efficiency and Accuracy</b></h5>
+              <h5 class="card-title"><p class="text-center"><b>Efficiency and Accuracy</b></h5></p>
               <div class="card bg-info text-white text-justify">
              <p class="card-text"> Our Secure Electronic Data Processing System allows Members to offer their customers 
                the option of paying by Check. It improves efficiency and accuracy while providing flexibility for both 
                members & consumers. While a lot are more comfortable with electronic payment options, there remains a large segment who still prefer to pay with checks. <a class="more_btn" href="../clients">Get Start</a>
      </p> <hr>
+                  <ul style="list-style:square; padding-left:5rem;">
+                      <li>Easy Approval </li>
+                      <li>No Hidden Fees</li>
+                      <li>On Time Payout</li>
+                      <li>No Monthly Fee</li>
+                  </li>   
+                </ul>
              </div>
-             </div>             </div> 
+             </div>             
+             </div> 
+            
          
     
-<!--##############################Datda card ############################-->
+<!--##############################  Datda card ############################-->
  <div class="card">
     <img class="card-img-top" src="../img/vpn-neto.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title"><b>Data Processing System</b></h5>
+      <h4><p class= "text-primary text-center">Benefits Overview </p></h4>
+      <h5 class="card-title"><P class="text-center"><b>Data Processing System</b></h5></P>
+      
       <div class="card bg-success text-white">
       <p class="card-text">Our Data Processing options can help you:
 - Reduce check processing costs.
 - Reduce the risk of fraud, returned checks, and non-sufficient funds notifications.
 - Our Proprietary Payment Gateway also increases back-office efficiency. <a class="more_btn" href="../partners">Get Start</a>.
-      </p> <hr>
+      </p> 
+      <hr>
+       <ul style="list-style:square; padding-left:5rem;">
+                      <li>No Set Up Fee</li>
+                      <li>Members Paid Weekly</li>
+                      <li>Fully Integrated Solution</li>
+                      <li>Recurring Payment Option</li>
+                  </li>   
+                </ul>
      </div>
      </div></div>
   <!--############################ Compliance card ##################################-->
 <div class="card">
     <img class="card-img-top" src="../img/energy.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title""text-center"><b>Electronic Checks</h5></b>
+      <h5 class="card-title""text-center"><p class= "text-center"><b>Electronic Checks</h5></b></p> 
       <div class="card bg-dark text-white">
       <p class="card-text">We have three (3) check acceptance options that provide near real-time authorizations, namely, through Virtual Terminal, API or MOTO. Check2Pay can convert paper checks to electronic transactions or accept checks as you do today. Your customers are given flexibility to choose the way they want to pay. <a class="more_btn" href="../securitycenter">Learn More</a> </p>
       <hr>
+       <ul style="list-style:square; padding-left:5rem;">
+                      <li>Near Real-Time Transaction Verification</li>
+                      <li>Exclusively done in house, no outsourcing</li>
+                      <li>Secure Customer Data Management</li>
+                      <li>Five (5) Stages Fraud Protection Process</li>
+                  </li>   
+                </ul>
 </div>
 </div>
   </div>
