--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -144,7 +144,7 @@
               <div class="row">
         <!--        <div class="col-sm-8">-->
     <div class="col-xs-8" style="text-align:left">
-                  <h2><p class="text-dark text-center" ml-10em>Secure Data Processing Solutions
+                  <h2><p class="text-warning text-center" ml-10em>Secure Data Processing Solutions
 guaranteed to increase Sales and Revenues </p></h2>
     <!--####################### Card Deck ##############################-->       
             <div class="card-deck"> 
