--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -133,16 +133,43 @@
 </div>
   </div>
 </section> 
-              <Br>
               <br>
+              <br>
+              what you want try this code:
+
+div {
+    height: 100px;
+    width:400px;
+    position: relative;
+}
+.c {
+    background: blue; /* Old browsers */
+}
+
+.c:after{
+    content: '';
+    position: absolute;
+    width:20%;
+    left:0;
+    height:110%;
+    background: yellow;
+}
+.c:before{
+    content: '';
+    position: absolute;
+    width:40%;
+    left:60%;
+    height:140%;
+    background: green;
+}
 
 <!---================================================= Section2  ===================================-->
 <section class="place 3 cards creative_feature_area" style="margin-top:10em">
 
-    <div class="container-fluid", style="margin-top:auto">
+    <div class="benefits-container-fluid", style="margin-top:auto." > 
     
               <div class="row">
-        <!--        <div class="col-sm-8">-->
+        <!-- <div class="col-sm-8">-->
     <div class="col-xs-8" style="text-align:left">
                   <h2><p class="text-warning text-center" ml-10em>Secure Data Processing Solutions
 guaranteed to increase Sales and Revenues </p></h2>
