--- a/templates/views/clients.hbs
+++ b/templates/views/clients.hbs
@@ -129,7 +129,7 @@
    
     <div class="col-4 bg-success">
       <div class="row" style="margin-top:1em;"> 
-         <div class="col-sm-12 " >
+        <!-- <div class="col-sm-12 " ></div>-->
               <div  class="col-xs-12 col-xs-12 " style="margin-bottom:1em;" >
                                        
                     <div class="card">
