--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -191,7 +191,7 @@
     <!--...................................................right side section...................................-->
     <div class="col-4 bg-success">
       <div class="row" style="margin-top:1em;">
-        <div class="col-sm-12">
+      <!--  <div class="col-sm-12">-->
          <div  class="col-xs-12 col-xs-10" style="margin-bottom:1em;">  <!---make picture cover green zone--->
                                        
                                         <div class="card">
