--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -135,33 +135,7 @@
 </section> 
               <br>
               <br>
-              what you want try this code:
-
-div {
-    height: 100px;
-    width:400px;
-    position: relative;
-}
-.c {
-    background: blue; /* Old browsers */
-}
-
-.c:after{
-    content: '';
-    position: absolute;
-    width:20%;
-    left:0;
-    height:110%;
-    background: yellow;
-}
-.c:before{
-    content: '';
-    position: absolute;
-    width:40%;
-    left:60%;
-    height:140%;
-    background: green;
-}
+              
 
 <!---================================================= Section2  ===================================-->
 <section class="place 3 cards creative_feature_area" style="margin-top:10em">
@@ -205,12 +179,13 @@ guaranteed to increase Sales and Revenues </p></h2>
       <h4><p class= "text-primary text-center">Benefits Overview </p></h4>
       <h5 class="card-title"><P class="text-center"><b>Data Processing System</b></h5></P>
       
-      <div class="card bg-success text-white">
-      <p class="card-text">Our Data Processing options can help you:
-- Reduce check processing costs.
-- Reduce the risk of fraud, returned checks, and non-sufficient funds notifications.
-- Our Proprietary Payment Gateway also increases back-office efficiency. <a class="more_btn" href="../partners">Get Start</a>.
-      </p> 
+      <div class="card bg-success text-white padding-left:1rem;">
+      <p class="card-text">Our Data Processing options can help you: 
+      <ul class = "list-style:circle; padding-left:1em ">
+          <li>- Reduce check processing costs.</li>
+          <li>- Reduce the risk of fraud, returned checks, and non-sufficient funds notifications.</li>
+          <li>- Our Proprietary Payment Gateway also increases back-office efficiency. <a class="more_btn" href="../partners">Get Start</a>.</li>
+      </p> </ul>
       <hr>
        <ul style="list-style:square; padding-left:2rem;">
                       <li>No Set Up Fee</li>
