--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -151,7 +151,7 @@ guaranteed to increase Sales and Revenues </p></h2>
             <div class="card-deck"> 
               <!--=======================Business card===============-->
               <div class="card" > 
-             <img class ="card-img-top" src="../img/import-export-beach.png" alt ="Card image Cap">
+             <img class ="card-img-top" src="../img/sunsetbirdsboat.png" alt ="Card image Cap">
               <div class="card-body"  "tex-left">
               <h5 class="card-title"><p class="text-center"><b>Efficiency and Accuracy</b></h5></p>
               <div class="card bg-info text-white text-justify">
