--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -151,10 +151,10 @@ guaranteed to increase Sales and Revenues </p></h2>
             <div class="card-deck"> 
               <!--=======================Business card===============-->
               <div class="card" > 
-             <img class ="card-img-top" src="../img/sunsetbirdsboat.png" alt ="Card image Cap">
+             <img class ="card-img-top" src="../img/energy.png" alt ="Card image Cap">
               <div class="card-body"  "tex-left">
               <h5 class="card-title"><p class="text-center"><b>Efficiency and Accuracy</b></h5></p>
-              <div class="card bg-info text-white text-justify">
+              <div class="card bg-info text-white text-justify p-3">
              <p class="card-text"> Our Secure Electronic Data Processing System allows Members to offer their customers 
                the option of paying by Check. It improves efficiency and accuracy while providing flexibility for both 
                members & consumers. While a lot are more comfortable with electronic payment options, there remains a large segment who still prefer to pay with checks. <a class="more_btn" href="../clients">Get Start</a>
@@ -179,7 +179,7 @@ guaranteed to increase Sales and Revenues </p></h2>
       <h4><p class= "text-primary text-center">Benefits Overview </p></h4>
       <h5 class="card-title"><P class="text-center"><b>Data Processing System</b></h5></P>
       
-      <div class="card bg-success text-white padding-left:1rem;">
+      <div class="card bg-success text-white p-3">
       <p class="card-text">Our Data Processing options can help you: 
       <ul class = "list-style:circle; padding-left:1em ">
           <li>- Reduce check processing costs.</li>
@@ -198,10 +198,10 @@ guaranteed to increase Sales and Revenues </p></h2>
      </div></div>
   <!--############################ Compliance card ##################################-->
 <div class="card">
-    <img class="card-img-top" src="../img/energy.png" alt="Card image cap">
+    <img class="card-img-top" src="../img/sunsetbirdsboat.png" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title""text-center"><p class= "text-center"><b>Electronic Checks</h5></b></p> 
-      <div class="card bg-dark text-white">
+      <div class="card bg-dark text-white p-3">
       <p class="card-text">We have three (3) check acceptance options that provide near real-time authorizations, namely, through Virtual Terminal, API or MOTO. Check2Pay can convert paper checks to electronic transactions or accept checks as you do today. Your customers are given flexibility to choose the way they want to pay. <a class="more_btn" href="../securitycenter">Learn More</a> </p>
       <hr>
        <ul style="list-style:square; padding-left:2rem;">
