--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -118,6 +118,7 @@
         <br>
         <br>
      <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ form ++++++++++++++++++++++++++++++++++++++-->                    
+      <form>
          <div class="row">
 
             <div class="col-md-8 col-md-offset-3" id="form_container">
@@ -166,7 +167,7 @@
     </div>
   </div>                   
 </div>                                                                                
-                                           
+  </form>                                         
           
        
           
