--- a/templates/views/benefits.hbs
+++ b/templates/views/benefits.hbs
@@ -77,7 +77,7 @@ body {
 <div class="container">
 
 <div class="content"> <br>
-    <img alt="" src="../img/chartbar.png" class="card-img-top" />
+    <img alt="" src="../img/Screenshot.png" class="card-img-top" />
   
   <!--are wider than 800 pixels.</h1>
   <h1>Resize the browser window to see the effect.</h1>
@@ -110,7 +110,7 @@ Merchants need to make sure that check drafts are duly authorized and consumers 
                 </p>
 
 
-             <img alt="" src="../img/compliancelogo2.png" class="card-img-bottom"> .</p>
+             <img alt="" src="../img/chartbar.png" class="card-img-bottom"> .</p>
   
 </div>
 
