--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -198,6 +198,7 @@ guaranteed to increase Sales and Revenues </p></h2>
      </div></div>
   <!--############################ Compliance card ##################################-->
 <div class="card">
+<!-- <div class="card-header"> Electronic Checks </div> -->
     <img class="card-img-top" src="../img/sunsetbirdsboat.png" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title""text-center"><p class= "text-center"><b>Electronic Checks</h5></b></p> 
